--- a/warmisitAI/src/main/resources/templates/admin.html
+++ b/warmisitAI/src/main/resources/templates/admin.html
@@ -451,7 +451,7 @@ a{
                             </a>
                         </li>
                         <li>
-                            <a href="/listaDeTecnicos">
+                            <a href="/bitacora-listar">
                                 <div class="icon">
                                     <ion-icon name="hammer-outline"></ion-icon>
                                 </div>
