--- a/warmisitAI/src/main/resources/templates/crear-registro-bitacora.html
+++ b/warmisitAI/src/main/resources/templates/crear-registro-bitacora.html
@@ -3,34 +3,17 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Lista de Incidentes</title>
-      	<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-		
-		<!-- Popper.js -->
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-		
-		 <!-- Agregar Bootstrap -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-			
-		<!-- Bootstrap JS -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-			crossorigin="anonymous"></script>
-       
-        <style>
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+      
+      <title>Registro en la Bitacora</title>
+</head>
+<style>
+	@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
 *{
-      margin: 0 ;
+      margin: 0;
       padding: 0;
-      box-sizing: border-box ;
+      box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
-}
-
-::selection {
-      background-color: transparent; 
 }
 
 :root{
@@ -38,6 +21,10 @@
       --bg: #1b1e22;
       --container: #262a2d;
       --white: #fffefe;
+}
+
+::selection {
+      background-color: transparent; 
 }
 
 body{
@@ -105,18 +92,15 @@ a{
 }
   
 .ds-menu{
-      width: 100% !important;
-      overflow-x: scroll !important;
-      height: 100% !important;
-      padding-bottom: 150px !important;
-      padding-top: 50px !important;
+      width: 100%;
+      overflow-x: scroll;
+      height: 100%;
+      padding-bottom: 150px;
+      padding-top: 50px;
 }
   
-  
 .ds-menu ul li{
-      position: relative !important;
-      left: -30px !important;
-      width: 100% !important;
+      position: relative;
 }
 
 .ds-menu ul li.active{
@@ -125,6 +109,30 @@ a{
       border-bottom-left-radius: 50px;
 }
 
+.ds-menu ul li.active::before{
+      content: '';
+      position: absolute;
+      top: -20px;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 5px 5px 0px 5px var(--bg);
+      background-color: transparent;
+}
+
+.ds-menu ul li.active::after{
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      border-top-right-radius: 20px;
+      box-shadow: 5px -2px 0px 2px var(--bg);
+      background-color: transparent;
+      
+}
   
 .ds-menu ul li a{
       cursor: pointer;
@@ -222,7 +230,6 @@ a{
 }
   
 .ds-perfil .info-perfil{
-	padding-top: 10px;
       transition: 0.5s;
       display: none;
 }
@@ -259,7 +266,6 @@ a{
       background: transparent;
       display: flex;
       white-space: nowrap;
-      text-decoration: none;
       color: var(--white);
       margin-top: 100px;
   }
@@ -307,7 +313,7 @@ a{
 .line.short{
       background-color: #606064;
       position: relative;
-      width: 100%;
+      width: 93%;
       top: -25px;
       height: 1px;
 }
@@ -328,9 +334,9 @@ a{
       bottom: 100px;
 }
   
-/*===================================
-    ESTILOS PANEL RIGHT
-===================================*/
+  /*===================================
+      ESTILOS PANEL RIGHT
+  ===================================*/
 .ds-panel{
     width: calc(100%);
     padding: 20px 30px 20px 40px;
@@ -341,7 +347,7 @@ a{
     width: 100%;
     background: var(--container);
     padding: 8px;
-    border-radius: 20px;
+    border-radius: 30px;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -349,7 +355,7 @@ a{
 
 .ds-panel .panel-header .icono{
     width: 50px;
-    inset: 10;
+    inset: 1;
     border-radius: 10px;
     text-align: center;
     padding: 6px 0px 0px 0px;
@@ -360,115 +366,164 @@ a{
 }
 
 .ds-panel .panel-header h2{
-	padding-top: 10px;
-	font-size: 1.7em;
+    font-size: 1.7em;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     color: var(--white);
 }
-  
-.panel-insights{
-      width: 100%;
-      float: left;
-      display: flex;
-      gap: 1.5rem;
-      justify-content: center;
-}
 
-.box{
-      width: 320px;
-      height: 120px;
-      background-color: var(--container);
-      margin-left: 10px;
-      padding: 10px;
-      border-radius: 2rem;
-      cursor: pointer;
-}
-
-.box p{
-      color: var(--white);
-      font-weight: bold;
-      line-height: 30px;
-      padding-left: 19px;
-      margin-top: 5px;
-      display: inline-block;
-}
-
-.box p [style="color: white;"]{
-	 font-size: 37px;
-	 padding-top: 10px;
-	 padding-bottom: 10px;
-}
-.box p span{
-      font-size: 27px;
-      font-weight: 800;
-      text-transform: uppercase;
-      color:var(--green);
-      display: block;
-      margin-top: 2px;
-}
-
-.box ion-icon{
-      font-size: 70px !important;
-      float: right;
-      margin-top: 17px !important;
-      color: var(--green);
-      padding-right: 20px;
-}
-
-/****************************/
-
-.table-container h2{
-      margin-bottom: 0.8rem;
-      color: var(--green);
-}
-
-.table-container table{
+.ds-panel-content{
       background: var(--container);
+      padding: 20px;
+      border-radius: 20px;
+      margin: 0px auto;
+      width: 900px;
+}
+
+.logbook-form{
+      display: grid;
+      margin-top: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 2rem;
+      row-gap: 1rem;
+}
+
+.input-wrap{
+      position: relative;
+}
+
+.input-wrap.w-100{
+      grid-column: span 2;
+}
+
+.logbook-input{
       width: 100%;
-      border-radius: 2rem;
-      padding: 1.5rem;
-      text-align: center;
-      transition: all 300ms ease;
-}
-
-table thead th{
-      color: #6db23e;
-      padding: 15px;
-}
-
-table tbody td{
-      height: 2.8rem;
-      color: #f5f3f3;
-}
-
-table tbody tr .primary a{
-      padding: 7px;
-      text-decoration: none;
-      text-transform: uppercase;
-      color: var(--green);
-}
-
-table tbody tr .primary a:hover{
-      width: 30px;
-      height: 50px;
-      background-color: var(--green);
-      border-radius: 10px;
+      background-color: #1f2225;
+      padding: 1.5rem 1.35rem calc(0.75rem - 2px) 1.35rem;
+      border: none;
+      outline: none;
+      font-family: inherit;
+      border-radius: 20px;
       color: var(--white);
+      font-weight: 600;
+      font-size: 0.95rem;
+      border: 2px solid transparent;
+      box-shadow: 0 0 0 0px hsla(var(--green), 92%, 54%, 0.169);
+      transition: 0.3s;
 }
 
-#detalleTecnicoModal .modal-dialog .modal-header.custom-modal-header {
-    background-color: var(--container);
-    color: #fff; 
+.logbook-input:hover{
+      background-color: #1b1e22;
 }
 
-	  </style>
-</head>
+.input-wrap label{
+      position: absolute;
+      top: 25%;
+      left: calc(1.35rem + 2px);
+      transform: translateY(-50%);
+      color: #6db23e;
+      pointer-events: none;
+      font-weight: 600;
+}
+
+.input-wrap label.text{
+      position: absolute;
+      top: 23% !important;
+}
+
+.input-wrap .icon{
+      position: absolute;
+      right: calc(1.35rem + 2px);
+      top: 50%;
+      transform: translateY(-50%);
+      pointer-events: none;
+      color: var(--green);
+      font-size: 1.5rem;
+      font-weight: 900;
+}
+
+textarea.logbook-input{
+      resize: none;
+      width: 100%;
+      min-height: 150px;
+}
+
+textarea.logbook-input ~ label{
+      top: 1.2rem;
+}
+
+textarea.logbook-input ~ .icon{
+      top: 1.3rem;
+      transform: none;
+}
+
+.input-wrap.focus .logbook-input{
+      border: 2px solid var(--green);
+}
+
+.input-wrap.textarea.not-empty label{
+      font-size: .7rem;
+      top: 10.75rem;
+      transform: translateY(-24px);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+      display: none;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+      display: none;
+}
+
+
+select {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background: transparent;
+      background-repeat: no-repeat;
+      background-position: right center;
+}
+
+input[type="time"]::selection{
+      background-color: transparent;
+}
+
+.logbook-buttons{
+      display: grid;
+      grid-template-columns: 1fr;
+      margin-top: 1rem !important;
+      margin-bottom: 2rem !important;
+      margin: 0 auto;
+      width: 60%;
+      grid-column: span 2;
+
+}
+
+.btn-registrar{
+      display: inline-block;
+      padding: 1.1rem 2rem;
+      background-image: linear-gradient(to right, #6db23e, #7bbd4e, #6db23e);
+      border: none;
+      border-radius: 40px;
+      color: var(--white);
+      font-size: 1.2rem;
+      font-weight: 700;
+      background-size: 200%;
+      text-transform: uppercase;
+      transition: 0.5s;
+}
+
+.btn-registrar:hover{
+      background-position: right;
+}
+	
+</style>
 <body>
       <div class="admin-dashboard">
 
-             <div class="ds-left-menu">
+            <div class="ds-left-menu">
     
                 <button class="btn-menu">
                     <ion-icon name="chevron-back-circle"></ion-icon>
@@ -479,7 +534,7 @@ table tbody tr .primary a:hover{
                         <ion-icon name="person-circle"></ion-icon>
                     </div>
                     <div class="info-perfil">
-                        <h3>[[${user.getFullname()}]]</h3>
+                        <h3>User</h3>
                     </div>
                 </div>
     
@@ -529,20 +584,18 @@ table tbody tr .primary a:hover{
                         </li>   
                     </ul> 
                 </div>
-    
+                
                 <div class="line-two"></div>
 
                 <div class="sign-off">
-					<span sec:authorize="isAuthenticated">
-					   <a th:href="@{/logout}" class="btn-sign-off">
-						   <div class="icon">
-						       <ion-icon name="log-out-outline"></ion-icon>
-						   </div>
-						   <div class="text">
-						      <span>Logout</span>
-						   </div>
-					   </a>
-					</span>
+                    <a href="#" class="btn-sign-off">
+                        <div class="icon">
+                            <ion-icon name="log-out-outline"></ion-icon>
+                        </div>
+                        <div class="text">
+                            <span>Logout</span>
+                        </div>
+                    </a>
                 </div>
                  
             </div>
@@ -551,92 +604,61 @@ table tbody tr .primary a:hover{
            
                 <div class="panel-header">
                     <div class="icono">
-                        <ion-icon name="folder-open-outline"></ion-icon>
+                        <ion-icon name="newspaper-outline"></ion-icon>
                     </div>
-                    <h2>Lista de Incidentes Evaluados</h2>
+                    <h2>Registro en la Bitacora</h2>
                 </div>
-                
-
-               <div class="table-container">
-
-                    <!-- En tu archivo lista-incidencias-evaluadas.html -->
-					<table>
-					    <thead>
-					        <tr>
-					            <th>Fecha</th>
-					            <th>Hora</th>
-					            <th>Tipo</th>
-					            <th>Accion</th>
-					        </tr>
-					    </thead>
-					    <tbody>
-					       
-					        <tr th:each="incidencia : ${incidenciasReportadas}">					     
-					            <td th:text="${#temporals.format(incidencia.fecha, 'dd/MM/yyyy')}"></td>					          
-					            <td th:text="${#temporals.format(incidencia.hora, 'hh:mm a')}"></td>
-					            <td th:text="${incidencia.tipoIncidencia}"></td>					         
-					            <td class="primary">
-									<button type="button" class="btn btn-primary btn-ver-detallesIncidencia"
-        th:attr="data-incidencia='{&quot;fecha&quot;: &quot;'+${#temporals.format(incidencia.fecha, 'yyyy-MM-dd')}+'&quot;,
-                                           &quot;hora&quot;: &quot;'+${#temporals.format(incidencia.hora, 'HH:mm:ss')}+'&quot;,
-                                           &quot;nombre&quot;: &quot;'+${incidencia.nombre}+'&quot;,
-                                           &quot;descripcion&quot;: &quot;'+${incidencia.descripcion}+'&quot;
-                                           }'">
-    Ver Detalles
-</button>
-                    			</td>
-					        </tr>
-					    </tbody>
-					</table>
-
+    
+                <div class="ds-panel-content"> 
+				<form action="/bitacora-guardar" method="post" class="logbook-form">
+				
+					<div class="input-wrap">
+						<input type="hidden" name="tipoIncidenciaId" value="1" />
+						<input type="date" autocomplete="off" name="fecha" class="logbook-input" required>
+						<label>Fecha</label>
+						<ion-icon class="icon" name="calendar-outline"></ion-icon>
+					</div>
+				
+					<div class="input-wrap">
+						<input type="time" autocomplete="off" name="hora" class="logbook-input" required>
+						<label>Hora</label>
+						<ion-icon class="icon" name="time-outline"></ion-icon>
+					</div>
+				
+					<div class="input-wrap w-100">
+						<select name="tipoIncidencia.id" class="logbook-input">
+							<option value="">Seleccione</option>
+							<th:block th:each="tipoIncidencia : ${tiposIncidencia}">
+								<option th:value="${tipoIncidencia.idTipoIncidencia}" th:text="${tipoIncidencia.nombre}"></option>
+							</th:block>
+						</select>
+						<label>Tipo</label>
+						<ion-icon class="icon" name="ticket-outline"></ion-icon>
+					</div>
+				
+					<div class="input-wrap w-100">
+						<input type="text" autocomplete="off" class="logbook-input" required>
+						<label>Nombre</label>
+						<ion-icon class="icon" name="chatbubble-ellipses-outline"></ion-icon>
+					</div>
+				
+					<div class="input-wrap textarea w-100">
+						<textarea name="descripcion" autocomplete="off" class="logbook-input" required></textarea>
+						<label class="text">Descripción</label>
+						<ion-icon class="icon" name="chatbubble-ellipses-outline"></ion-icon>
+					</div>
+				
+					<div class="logbook-buttons w-100">
+						<button type="submit" class="btn-registrar registrar">
+							Registrar
+						</button>
+					</div>
+				</form>
+                </div>
+    
             </div>
     
         </div>
-        
-        
-         <div class="modal fade" id="detalleIncidenciaEvaluada" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header custom-modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Detalle Incidencia Evaluada</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					
-					<div class="modal-body">
-						<div class="mb-3">
-							<label for="fecha">Fecha</label>
-							<input type="date"class="form-control" id="fecha" readonly disabled="true">
-						</div>
-						
-						<div class="mb-3">
-							<label for="hora">Hora</label>
-							<input type="datetime"class="form-control" id="hora" readonly disabled="true">
-						</div>
-						
-						<div class="mb-3">
-							<label for="nombre">Nombre</label>
-							<input type="text"class="form-control" id="nombre" readonly disabled="true">
-						</div>
-						
-						<div class="mb-3">
-							<label for="descripcion">Descripcion:</label>
-							<textarea class="form-control" id="descripcion" readonly disabled="true"></textarea>
-						</div>
-						
-						<div class="mb-3">
-							<label for="descripcion">Tipo:</label>
-							<textarea class="form-control" id="tipoIncidencia" readonly disabled="true"></textarea>
-						</div>
-						
-						
-					</div>
-					
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-					</div>
-				</div>
-			</div>	  
-	  </div>
     
 </body>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -664,20 +686,21 @@ table tbody tr .primary a:hover{
     }
     menulist.forEach((item)=>
     item.addEventListener('click', activeLink));
-    
-   /**		MODAL	**/
-    $(document).on("click", ".btn-ver-detallesIncidencia", function() {
-    const incidencia = $(this).data("incidencia");
-    
-    $("#fecha").val(incidencia.fecha);
-    $("#hora").val(incidencia.hora);
-    $("#nombre").val(incidencia.nombre);
-    $("#descripcion").val(incidencia.descripcion);
-   
-   
-   $("#detalleIncidenciaEvaluada").modal("show");
-   
-});
 
+
+    const inputs = document.querySelectorAll(".logbook-input");
+
+    inputs.forEach(ipt =>{
+        ipt.addEventListener("focus", () =>{
+            ipt.parentNode.classList.add("focus");
+            ipt.parentNode.classList.add("not-empty");
+        });
+        ipt.addEventListener("blur", () =>{
+            if(ipt.value == ""){
+                ipt.parentNode.classList.remove("not-empty");
+            }
+            ipt.parentNode.classList.remove("focus");
+        });
+    });
 </script>
 </html>
